# NFTEdiz-Staking-SmartContract

./: Anchor.toml  README.md  package.json  readme.md
cli/: script.ts  type.ts
programs/Armory-Staking/: Cargo.toml
programs/Armory-Staking/src/: account.rs  constant.rs  error.rs  lib.rs
tests/: Armory-Staking.ts
