[package]
name = "Armory-Staking"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "armory_staking"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-spl = "0.26.0"
anchor-lang = "0.26.0"
solana-program = "=1.14.17"
winnow="=0.4.1"
toml_datetime="=0.6.1"
mpl-token-metadata = { version = "1.12.0", features = ["no-entrypoint"] }
bytemuck = "1.13.1"
